# Read_Parsing_Analysis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: audit.yml  rust.yml
src/: binary_format.rs  csv_format.rs  error.rs  lib.rs  main.rs  mt940_format.rs  txt_format.rs
tests/: binary_integration.rs  cli_integration.rs  comparer_integration.rs  parser_integration.rs
